--- a/style.css
+++ b/style.css
@@ -11,6 +11,28 @@ body {
     height: 100%;
 }
 
+/* @font-face {
+    font-family: nimbus sans L;
+    src: url('fonts/NimbusSanL-Bold.ttf');
+} */
+
+/* @font-face {
+    font-family: nimbus sans L;
+    src: url('fonts/NimbusSanL-BoldCond.ttf');
+} */
+
+@font-face {
+    font-family: nimbus sans L;
+    src: url('fonts/NimbusSanL-Regu.ttf');
+}
+
+/* @font-face {
+    font-family: nimbus sans L;
+    src: url('fonts/NimbusSanL-ReguCond.ttf');
+} */
+
+
+
 #main {
     width: 100%;
 }
@@ -271,20 +293,20 @@ body {
     padding: 0 8vh;
 }
 
-#btext h1{
+#btext h1 {
     font-size: 2.8vw;
     font-weight: 400;
     line-height: 1;
     letter-spacing: -.15VW;
 }
 
-#btext p{
+#btext p {
     margin-top: 20px;
     width: 90%;
     font-size: 1vw;
 }
 
-#future{
+#future {
     position: relative;
     display: flex;
     align-items: center;
@@ -295,7 +317,7 @@ body {
     background-color: #fff;
 }
 
-#future video{
+#future video {
     opacity: 0;
     position: absolute;
     top: 50%;
@@ -303,7 +325,8 @@ body {
     transform: translate(-50%, -50%);
     width: 100%;
 }
-#ftext{
+
+#ftext {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -313,7 +336,8 @@ body {
     padding: 20px;
     border-radius: 10px;
 }
-#ftext button{
+
+#ftext button {
     padding: .8vw 1.7vw;
     font-size: .6vw;
     margin-top: 10px;
